--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "next": "9.0.7",
+    "prop-types": "^15.7.2",
     "react": "16.10.2",
     "react-dom": "16.10.2"
   },
