--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   "dependencies": {
     "next": "9.0.7",
     "prop-types": "^15.7.2",
-    "react": "16.10.2",
-    "react-dom": "16.10.2"
+    "react": "^16.10.2",
+    "react-dom": "^16.10.2"
   },
   "devDependencies": {
     "eslint": "6.1.0",
